[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
authors = [
  {name = "Jérome Eertmans", email = "jeertmans@icloud.com"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
  "av>=9.0.0",
]
description = "Common Audio and Video filters"
dynamic = ["version"]
keywords = ["libav", "ffmpeg", "audio", "video", "filters"]
license = {text = "MIT"}
name = "avfilters"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5.0",
]
docs = [
  "sphinx>=6",
  "sphinx-book-theme>=1",
  "sphinx-autodoc-typehints>=1",
  "sphinx-copybutton>=0.5.2",
  "sphinxext-opengraph>=0.9.1",
]
test = [
  "numpy>=1.24.4",
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
]

[project.urls]
Changelog = "https://github.com/jeertmans/avfilters/releases"
Documentation = "https://eertmans.be/avfilters"
Founding = "https://github.com/sponsors/jeertmans"
Homepage = "https://github.com/jeertmans/avfilters"
Repository = "https://github.com/jeertmans/avfilters"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]
precision = 2

[tool.pyright]
include = ["src/avfilters", "tests"]
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--doctest-ignore-import-errors",
  "--doctest-glob=*.md",
  "--doctest-glob=*.rst",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["avfilters", "tests"]}

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
